# rag-azure-apim-sample

./: .env.example  .gitignore  Makefile  README.md  azure.yaml
.claude/skills/diagnose/: SKILL.md
.claude/skills/use/: SKILL.md
app/: Dockerfile  config.py  domain.py  main.py  pyproject.toml  schema.sql  telemetry.py
app/prompts/: system.md
app/services/: chat.py  history.py  search.py
app/static/: index.html
docs/: observability.md
infrastructure/: bicepconfig.json  main.bicep  main.bicepparam  types.bicep
infrastructure/modules/: ai.bicep  apim-ai.bicep  apim-app.bicep  app.bicep  identity.bicep  monitoring.bicep  networking.bicep  workbook.bicep  workbook.json
ingestion/: .dockerignore  Dockerfile  config.py  domain.py  main.py  pyproject.toml  schema.sql  telemetry.py
ingestion/services/: embeddings.py  index.py  state.py
jobs/ingestion/: config.py  main.py  pyproject.toml
jobs/ingestion-job/: domain.py  main.py  telemetry.py
jobs/ingestion-job/services/: documents.py  source.py
jobs/ingestion/services/: index.py  state.py
scripts/: open.sh  preflight.sh  seed.py  telemetry.py
scripts/samples/: m50-battery.md  x200-e42.md  x200-filter.md
