[project]
name = "rag-ingestion"
version = "0.1.0"
description = "Ingestion Job for the RAG sample: pull documents from sources, chunk + extract metadata, embed via APIM, push to Azure AI Search — keyless (managed identity)."
requires-python = ">=3.12"
dependencies = [
    "docling>=2.110.0",
    "openai>=1.50",
    "httpx>=0.27",
    "tiktoken>=0.8",
    "pydantic-settings>=2.5",
    "azure-identity>=1.19",
    "azure-storage-blob>=12.23",
    "azure-storage-queue>=12.17.0",
    "azure-cosmos>=4.9",
    "azure-monitor-opentelemetry>=1.6",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]

[tool.uv]
package = false
